[tool.poetry]
name = "jinjer"
version = "0.1.0"
description = "A friendly SSG with magical capabilities and no soul."
authors = ["Tomas Votava <info@tomasvotava.eu>"]
license = "MIT"

[tool.poe.tasks]
pylint = "pylint main.py jinjer"
mypy = "mypy --config-file pyproject.toml main.py jinjer"
lint = ["pylint", "mypy"]

[mypy]
ignore_missing_imports = true

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pylint = "^2.8.2"
black = "^21.5b1"
mypy = "^0.812"
poethepoet = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
